package de.fhmaze.communication.convert;

public interface Converter<T> extends Serializer<T>, Parser<T> {}
