@startuml GameCommunication

' styling options
!include %dirpath()/../styles/class.iuml

' class diagram (https://plantuml.com/class-diagram)
package communication {
    package protocol {
        interface ProtocolFactory <<interface>> {
            + createActionSerializer(): Serializer<Action> {abstract}
            + createActionResultConverter(): Converter<ActionResult> {abstract}
            + createCellStatusConverter(): Converter<CellStatus> {abstract}
            + createLogCellStatusSerializer(): Serializer<CellStatus> {abstract}
        }
    }

    package convert {
        interface Serializer<T: class> <<interface>> {
            + serialize(object: T): String {abstract}
        }

        interface Parser<T: class> <<interface>> {
            + parse(data: String): T {abstract}
        }

        interface Converter<T: class> <<interface>>
        Serializer <|-- Converter : <<bind>> <T -> T>
        Parser <|-- Converter : <<bind>> <T -> T>
    }

    package registry {
        class SerializerRegistry<T: class> {
            - serializerProvider: Function<T, Serializer<T>> {readOnly}
            --
            + SerializerRegistry(serializerProvider: Function<T, Serializer<T>>)
            + serialize(T: object): String
        }
        communication.convert.Serializer <|.. SerializerRegistry : <<bind>> <T -> T>

        class ParserRegistry<T: class> {
            - parserProvider: Function<String, Parser<T>> {readOnly}
            --
            + ParserRegistry(parserProvider: Function<String, Parser<T>>)
            + parse(data: String): String
        }
        communication.convert.Parser <|.. ParserRegistry : <<bind>> <T -> T>

        class ConverterRegistry<T: class> {
            - serializerProvider: Function<T, Serializer<T>> {readOnly}
            - parserProvider: Function<String, Parser<T>> {readOnly}
            --
            + ConverterRegistry(serializerProvider: Function<T, Serializer<T>>,
              parserProvider: Function<String, Parser<T>>)
            + serialize(T: object): String
            + parse(data: String): String
        }
        communication.convert.Converter <|.. ConverterRegistry : <<bind>> <T -> T>
    }
}

@enduml
